Corrections for Tuples in simulation runners

--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Earth System Simulation - Google Colab Version\n",
     "\n",
-    "This notebook is optimized for running the Earth system simulation in Google Colab.\n",
+    "This notebook shows how to run the Earth system simulation in Google Colab.\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/yourusername/earth_system_sim/blob/main/examples/colab_simulation.ipynb)"
    ]
@@ -19,7 +19,7 @@
    "source": [
     "## 1. Setup Environment\n",
     "\n",
-    "First, let's set up our environment and install dependencies."
+    "First, let's clone the repository and install required packages."
    ]
   },
   {
@@ -33,20 +33,44 @@
     "!git clone https://github.com/yourusername/earth_system_sim.git\n",
     "%cd earth_system_sim\n",
     "\n",
-    "# Install requirements\n",
-    "!pip install -r requirements.txt\n",
-    "\n",
-    "# Add project root to Python path\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "sys.path.append(str(Path.cwd()))"
+    "# Install package in development mode\n",
+    "!pip install -e ."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Mount Google Drive (Optional)\n",
+    "## 2. Import Dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import yaml\n",
+    "from pathlib import Path\n",
+    "from tqdm.notebook import tqdm\n",
+    "import sys\n",
+    "\n",
+    "# Add project root to path\n",
+    "project_root = Path.cwd()\n",
+    "if str(project_root) not in sys.path:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from scripts.run_simulation import EarthSystemSimulation\n",
+    "from scripts.visualize_results import create_visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Mount Google Drive (Optional)\n",
     "\n",
     "If you want to save results persistently, mount your Google Drive."
    ]
@@ -71,32 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Import Dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import yaml\n",
-    "from IPython.display import HTML\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "from scripts.run_simulation import EarthSystemSimulation\n",
-    "from scripts.visualize_results import create_visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Check GPU Availability\n",
-    "\n",
-    "Verify that we have access to a GPU."
+    "## 4. Check GPU Availability"
    ]
   },
   {
@@ -116,9 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Load and Modify Configuration\n",
-    "\n",
-    "Load the default configuration and adjust for Colab's resources."
+    "## 5. Load and Modify Configuration"
    ]
   },
   {
@@ -151,10 +148,9 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Create simulation\n",
+    "# Create and run simulation\n",
     "sim = EarthSystemSimulation('config/colab_config.yaml', device)\n",
     "\n",
-    "# Run simulation\n",
     "print(\"Running simulation...\")\n",
     "trajectory = sim.run_simulation(\n",
     "    num_steps=50,\n",
@@ -196,9 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Display Interactive Results\n",
-    "\n",
-    "Create and display interactive visualizations of the results."
+    "## 8. Display Results"
    ]
   },
   {
@@ -206,80 +200,36 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
+    "# Plot time series of key variables\n",
+    "fig, axes = plt.subplots(3, 1, figsize=(12, 12))\n",
     "\n",
-    "# Create interactive dashboard\n",
-    "fig = make_subplots(\n",
-    "    rows=2, cols=2,\n",
-    "    subplot_titles=(\n",
-    "        'Temperature Field',\n",
-    "        'Vegetation Distribution',\n",
-    "        'Topography',\n",
-    "        'System Evolution'\n",
-    "    )\n",
-    ")\n",
+    "# Physical system - mean temperature\n",
+    "temp_mean = np.mean(trajectory['physical_states'][..., 0], axis=(1, 2))\n",
+    "axes[0].plot(temp_mean, 'r-')\n",
+    "axes[0].set_title('Mean Temperature')\n",
+    "axes[0].grid(True)\n",
     "\n",
-    "# Add temperature plot\n",
-    "fig.add_trace(\n",
-    "    go.Heatmap(\n",
-    "        z=trajectory['physical'][0][..., 0],\n",
-    "        colorscale='RdBu_r',\n",
-    "        name='Temperature'\n",
-    "    ),\n",
-    "    row=1, col=1\n",
-    ")\n",
+    "# Biosphere - mean vegetation cover\n",
+    "veg_mean = np.mean(trajectory['biosphere_states'][..., 0], axis=0)\n",
+    "axes[1].plot(veg_mean, 'g-')\n",
+    "axes[1].set_title('Mean Vegetation Cover')\n",
+    "axes[1].grid(True)\n",
     "\n",
-    "# Add vegetation plot\n",
-    "fig.add_trace(\n",
-    "    go.Heatmap(\n",
-    "        z=trajectory['biosphere'][0][..., 0],\n",
-    "        colorscale='YlGn',\n",
-    "        name='Vegetation'\n",
-    "    ),\n",
-    "    row=1, col=2\n",
-    ")\n",
+    "# Geosphere - mean elevation\n",
+    "elev_mean = np.mean(trajectory['geosphere_states'][..., 0], axis=(1, 2))\n",
+    "axes[2].plot(elev_mean, 'b-')\n",
+    "axes[2].set_title('Mean Elevation')\n",
+    "axes[2].grid(True)\n",
     "\n",
-    "# Add topography plot\n",
-    "fig.add_trace(\n",
-    "    go.Surface(\n",
-    "        z=trajectory['geosphere'][0][..., 0],\n",
-    "        colorscale='terrain',\n",
-    "        name='Elevation'\n",
-    "    ),\n",
-    "    row=2, col=1\n",
-    ")\n",
-    "\n",
-    "# Add time series\n",
-    "times = np.array([t['physical'] for t in trajectory['times']])\n",
-    "temp_mean = np.mean(trajectory['physical'][..., 0], axis=(1, 2))\n",
-    "\n",
-    "fig.add_trace(\n",
-    "    go.Scatter(\n",
-    "        x=times,\n",
-    "        y=temp_mean,\n",
-    "        name='Mean Temperature',\n",
-    "        line=dict(color='red')\n",
-    "    ),\n",
-    "    row=2, col=2\n",
-    ")\n",
-    "\n",
-    "# Update layout\n",
-    "fig.update_layout(\n",
-    "    height=800,\n",
-    "    width=1000,\n",
-    "    title_text=\"Earth System Simulation Results\",\n",
-    "    showlegend=True\n",
-    ")\n",
-    "\n",
-    "fig.show()"
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Save Results to Drive"
+    "## 9. Save Results"
    ]
   },
   {
@@ -287,17 +237,17 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Save trajectory data\n",
-    "data_path = os.path.join(output_dir, 'simulation_results.npz')\n",
+    "# Save simulation results\n",
+    "save_path = os.path.join(output_dir, 'simulation_results.npz')\n",
     "np.savez(\n",
-    "    data_path,\n",
+    "    save_path,\n",
     "    physical_states=trajectory['physical'],\n",
     "    biosphere_states=trajectory['biosphere'],\n",
     "    geosphere_states=trajectory['geosphere'],\n",
     "    times=trajectory['times']\n",
     ")\n",
     "\n",
-    "print(f\"Results saved to: {data_path}\")"
+    "print(f\"Results saved to: {save_path}\")"
    ]
   }
  ],
