--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -17,9 +17,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Setup Environment\n",
+    "## 1. Setup and Validation\n",
     "\n",
-    "First, let's clone the repository and install required packages."
+    "First, let's set up the environment and validate all components."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": true
+   },
+   "source": [
+    "# Install required packages\n",
+    "!pip install torch numpy matplotlib pyyaml tqdm plotly"
    ]
   },
   {
@@ -38,13 +49,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Import Dependencies"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -54,48 +58,37 @@
     "import matplotlib.pyplot as plt\n",
     "import yaml\n",
     "from pathlib import Path\n",
-    "from tqdm.notebook import tqdm\n",
     "import sys\n",
+    "from typing import Dict, List, Tuple, Optional, Union, Any\n",
     "\n",
-    "# Add project root to path\n",
-    "project_root = Path.cwd()\n",
-    "if str(project_root) not in sys.path:\n",
-    "    sys.path.append(str(project_root))\n",
+    "# Verify imports work correctly\n",
+    "def verify_imports():\n",
+    "    try:\n",
+    "        from scripts.run_simulation import EarthSystemSimulation\n",
+    "        from scripts.visualize_results import create_visualizations\n",
+    "        from src.models.physical import PINN\n",
+    "        from src.models.biosphere import BiospherePolicy\n",
+    "        from src.models.geosphere import GeospherePolicy\n",
+    "        print(\"All imports successful!\")\n",
+    "        return True\n",
+    "    except ImportError as e:\n",
+    "        print(f\"Import error: {str(e)}\")\n",
+    "        return False\n",
     "\n",
-    "from scripts.run_simulation import EarthSystemSimulation\n",
-    "from scripts.visualize_results import create_visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Mount Google Drive (Optional)\n",
+    "# Verify system configuration\n",
+    "def verify_system():\n",
+    "    print(\"System Configuration:\")\n",
+    "    print(f\"Python version: {sys.version}\")\n",
+    "    print(f\"PyTorch version: {torch.__version__}\")\n",
+    "    print(f\"NumPy version: {np.__version__}\")\n",
+    "    print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(f\"CUDA device: {torch.cuda.get_device_name(0)}\")\n",
     "\n",
-    "If you want to save results persistently, mount your Google Drive."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": true
-   },
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "# Create output directory in Drive\n",
-    "import os\n",
-    "output_dir = '/content/drive/MyDrive/earth_system_results'\n",
-    "os.makedirs(output_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Check GPU Availability"
+    "# Run verifications\n",
+    "verify_system()\n",
+    "if not verify_imports():\n",
+    "    raise RuntimeError(\"Import verification failed. Please check the setup.\")"
    ]
   },
   {
@@ -103,44 +96,42 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(f\"Using device: {device}\")\n",
+    "# Validate configuration\n",
+    "def validate_config(config: Dict) -> bool:\n",
+    "    \"\"\"Validate configuration structure and values.\"\"\"\n",
+    "    required_keys = ['grid_height', 'grid_width', 'physical_system', \n",
+    "                     'biosphere', 'geosphere', 'integration']\n",
+    "    \n",
+    "    # Check required keys\n",
+    "    for key in required_keys:\n",
+    "        if key not in config:\n",
+    "            print(f\"Missing required key: {key}\")\n",
+    "            return False\n",
+    "    \n",
+    "    # Validate grid dimensions\n",
+    "    if config['grid_height'] <= 0 or config['grid_width'] <= 0:\n",
+    "        print(\"Invalid grid dimensions\")\n",
+    "        return False\n",
+    "    \n",
+    "    return True\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"Memory allocated: {torch.cuda.memory_allocated(0) / 1e9:.2f} GB\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Load and Modify Configuration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "source": [
-    "# Load config\n",
+    "# Load and validate configuration\n",
     "with open('config/model_config.yaml', 'r') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
-    "# Adjust for Colab resources\n",
-    "config['grid_height'] = 16  # Reduced size\n",
-    "config['grid_width'] = 16   # Reduced size\n",
+    "if not validate_config(config):\n",
+    "    raise ValueError(\"Configuration validation failed\")\n",
     "\n",
-    "# Save modified config\n",
-    "with open('config/colab_config.yaml', 'w') as f:\n",
-    "    yaml.dump(config, f)"
+    "print(\"Configuration validated successfully!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Run Simulation"
+    "## 2. Initialize Simulation\n",
+    "\n",
+    "Now we'll set up the simulation with proper error handling."
    ]
   },
   {
@@ -148,23 +139,30 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Create and run simulation\n",
-    "sim = EarthSystemSimulation('config/colab_config.yaml', device)\n",
+    "# Initialize simulation with error handling\n",
+    "def initialize_simulation(config_path: str) -> Any:\n",
+    "    \"\"\"Initialize simulation with proper error handling.\"\"\"\n",
+    "    try:\n",
+    "        from scripts.run_simulation import EarthSystemSimulation\n",
+    "        device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "        sim = EarthSystemSimulation(config_path, device)\n",
+    "        return sim\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error initializing simulation: {str(e)}\")\n",
+    "        raise\n",
     "\n",
-    "print(\"Running simulation...\")\n",
-    "trajectory = sim.run_simulation(\n",
-    "    num_steps=50,\n",
-    "    save_frequency=5\n",
-    ")\n",
-    "\n",
-    "print(\"Simulation complete!\")"
+    "# Initialize simulation\n",
+    "sim = initialize_simulation('config/model_config.yaml')\n",
+    "print(\"Simulation initialized successfully!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Create Visualizations"
+    "## 3. Run Simulation\n",
+    "\n",
+    "Run the simulation with progress tracking and error handling."
    ]
   },
   {
@@ -172,27 +170,33 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Load visualization config\n",
-    "with open('config/visualization_config.yaml', 'r') as f:\n",
-    "    viz_config = yaml.safe_load(f)\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
-    "# Create visualizations\n",
-    "print(\"Creating visualizations...\")\n",
-    "create_visualizations(\n",
-    "    trajectory,\n",
-    "    viz_config,\n",
-    "    output_dir,\n",
-    "    make_animations=True\n",
-    ")\n",
+    "def run_simulation_with_progress(sim: Any, num_steps: int, save_frequency: int) -> Dict:\n",
+    "    \"\"\"Run simulation with progress tracking and error handling.\"\"\"\n",
+    "    try:\n",
+    "        print(\"Starting simulation...\")\n",
+    "        trajectory = sim.run_simulation(\n",
+    "            num_steps=num_steps,\n",
+    "            save_frequency=save_frequency\n",
+    "        )\n",
+    "        print(\"Simulation completed successfully!\")\n",
+    "        return trajectory\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during simulation: {str(e)}\")\n",
+    "        raise\n",
     "\n",
-    "print(f\"Results saved to: {output_dir}\")"
+    "# Run simulation\n",
+    "trajectory = run_simulation_with_progress(sim, num_steps=50, save_frequency=5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Display Results"
+    "## 4. Analyze Results\n",
+    "\n",
+    "Create visualizations and analyze the simulation results."
    ]
   },
   {
@@ -200,36 +204,48 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Plot time series of key variables\n",
-    "fig, axes = plt.subplots(3, 1, figsize=(12, 12))\n",
+    "def plot_results(trajectory: Dict):\n",
+    "    \"\"\"Create basic plots of simulation results.\"\"\"\n",
+    "    fig, axes = plt.subplots(3, 1, figsize=(12, 12))\n",
+    "    \n",
+    "    # Plot physical system results\n",
+    "    temp_mean = np.mean(trajectory['physical'][..., 0], axis=(1, 2))\n",
+    "    axes[0].plot(temp_mean, 'r-', label='Mean Temperature')\n",
+    "    axes[0].set_title('Physical System')\n",
+    "    axes[0].grid(True)\n",
+    "    axes[0].legend()\n",
+    "    \n",
+    "    # Plot biosphere results\n",
+    "    veg_mean = np.mean(trajectory['biosphere'][..., 0], axis=0)\n",
+    "    axes[1].plot(veg_mean, 'g-', label='Mean Vegetation')\n",
+    "    axes[1].set_title('Biosphere System')\n",
+    "    axes[1].grid(True)\n",
+    "    axes[1].legend()\n",
+    "    \n",
+    "    # Plot geosphere results\n",
+    "    elev_mean = np.mean(trajectory['geosphere'][..., 0], axis=(1, 2))\n",
+    "    axes[2].plot(elev_mean, 'b-', label='Mean Elevation')\n",
+    "    axes[2].set_title('Geosphere System')\n",
+    "    axes[2].grid(True)\n",
+    "    axes[2].legend()\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
     "\n",
-    "# Physical system - mean temperature\n",
-    "temp_mean = np.mean(trajectory['physical_states'][..., 0], axis=(1, 2))\n",
-    "axes[0].plot(temp_mean, 'r-')\n",
-    "axes[0].set_title('Mean Temperature')\n",
-    "axes[0].grid(True)\n",
-    "\n",
-    "# Biosphere - mean vegetation cover\n",
-    "veg_mean = np.mean(trajectory['biosphere_states'][..., 0], axis=0)\n",
-    "axes[1].plot(veg_mean, 'g-')\n",
-    "axes[1].set_title('Mean Vegetation Cover')\n",
-    "axes[1].grid(True)\n",
-    "\n",
-    "# Geosphere - mean elevation\n",
-    "elev_mean = np.mean(trajectory['geosphere_states'][..., 0], axis=(1, 2))\n",
-    "axes[2].plot(elev_mean, 'b-')\n",
-    "axes[2].set_title('Mean Elevation')\n",
-    "axes[2].grid(True)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "# Plot results\n",
+    "try:\n",
+    "    plot_results(trajectory)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error plotting results: {str(e)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Save Results"
+    "## 5. Save Results\n",
+    "\n",
+    "Save the simulation results to Google Drive."
    ]
   },
   {
@@ -237,17 +253,36 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Save simulation results\n",
-    "save_path = os.path.join(output_dir, 'simulation_results.npz')\n",
-    "np.savez(\n",
-    "    save_path,\n",
-    "    physical_states=trajectory['physical'],\n",
-    "    biosphere_states=trajectory['biosphere'],\n",
-    "    geosphere_states=trajectory['geosphere'],\n",
-    "    times=trajectory['times']\n",
-    ")\n",
+    "def save_results(trajectory: Dict, save_path: str):\n",
+    "    \"\"\"Save simulation results with error handling.\"\"\"\n",
+    "    try:\n",
+    "        np.savez(\n",
+    "            save_path,\n",
+    "            physical_states=trajectory['physical'],\n",
+    "            biosphere_states=trajectory['biosphere'],\n",
+    "            geosphere_states=trajectory['geosphere'],\n",
+    "            times=trajectory['times']\n",
+    "        )\n",
+    "        print(f\"Results saved to: {save_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving results: {str(e)}\")\n",
     "\n",
-    "print(f\"Results saved to: {save_path}\")"
+    "# Mount Google Drive and save results\n",
+    "try:\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    \n",
+    "    # Create output directory\n",
+    "    output_dir = '/content/drive/MyDrive/earth_system_results'\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Save results\n",
+    "    save_path = os.path.join(output_dir, 'simulation_results.npz')\n",
+    "    save_results(trajectory, save_path)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error accessing Google Drive: {str(e)}\")\n",
+    "    print(\"Saving results locally instead...\")\n",
+    "    save_results(trajectory, 'simulation_results.npz')"
    ]
   }
  ],
@@ -261,18 +296,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   }
  },
  "nbformat": 4,
