Refactor Colab simulation notebook for improved path handling and simulation execution

--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -20,7 +20,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Install required packages\n",
     "!pip install torch numpy matplotlib pyyaml tqdm plotly"
@@ -30,7 +29,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Clone repository\n",
     "!git clone https://github.com/yourusername/earth_system_sim.git\n",
@@ -41,21 +39,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Set up Python path\n",
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "# Add the project root and src directory to Python path\n",
-    "project_root = Path.cwd()\n",
+    "# Get absolute paths\n",
+    "project_root = Path.cwd().absolute()\n",
     "src_path = project_root / 'src'\n",
+    "scripts_path = project_root / 'scripts'\n",
     "\n",
-    "if str(project_root) not in sys.path:\n",
-    "    sys.path.insert(0, str(project_root))\n",
-    "if str(src_path) not in sys.path:\n",
-    "    sys.path.insert(0, str(src_path))\n",
+    "# Add paths to sys.path\n",
+    "paths_to_add = [str(project_root), str(src_path), str(scripts_path)]\n",
+    "for path in paths_to_add:\n",
+    "    if path not in sys.path:\n",
+    "        sys.path.insert(0, path)\n",
     "\n",
     "print(\"Python path:\")\n",
     "for p in sys.path:\n",
@@ -66,7 +65,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Create __init__.py files if they don't exist\n",
     "def ensure_init_files():\n",
@@ -95,9 +93,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Import and verify dependencies\n",
+    "# Import dependencies\n",
     "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -105,25 +102,8 @@
     "from tqdm.notebook import tqdm\n",
     "from typing import Dict, List, Tuple, Optional, Union, Any\n",
     "\n",
-    "def verify_imports():\n",
-    "    \"\"\"Verify all required imports.\"\"\"\n",
-    "    try:\n",
-    "        from scripts.run_simulation import EarthSystemSimulation\n",
-    "        print(\"✓ run_simulation\")\n",
-    "        \n",
-    "        from src.models.physical import PINN\n",
-    "        print(\"✓ physical models\")\n",
-    "        \n",
-    "        from src.models.biosphere import BiospherePolicy\n",
-    "        print(\"✓ biosphere models\")\n",
-    "        \n",
-    "        from src.models.geosphere import GeospherePolicy\n",
-    "        print(\"✓ geosphere models\")\n",
-    "        \n",
-    "        return True\n",
-    "    except ImportError as e:\n",
-    "        print(f\"Import error: {str(e)}\")\n",
-    "        return False\n",
+    "# Explicitly import from scripts\n",
+    "from run_simulation import EarthSystemSimulation\n",
     "\n",
     "def verify_system():\n",
     "    \"\"\"Verify system configuration.\"\"\"\n",
@@ -135,15 +115,8 @@
     "    if torch.cuda.is_available():\n",
     "        print(f\"CUDA device: {torch.cuda.get_device_name(0)}\")\n",
     "\n",
-    "# Run verifications\n",
-    "print(\"Verifying system configuration...\")\n",
-    "verify_system()\n",
-    "\n",
-    "print(\"\\nVerifying imports...\")\n",
-    "if not verify_imports():\n",
-    "    raise RuntimeError(\"Import verification failed. Please check the setup.\")\n",
-    "else:\n",
-    "    print(\"All imports verified successfully!\")"
+    "# Run system verification\n",
+    "verify_system()"
    ]
   },
   {
@@ -157,7 +130,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "def validate_config(config):\n",
     "    \"\"\"Validate configuration structure and values.\"\"\"\n",
@@ -178,7 +150,8 @@
     "    return True\n",
     "\n",
     "# Load configuration\n",
-    "with open('config/model_config.yaml', 'r') as f:\n",
+    "config_path = project_root / 'config' / 'model_config.yaml'\n",
+    "with open(config_path, 'r') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
     "if not validate_config(config):\n",
@@ -197,22 +170,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Initialize simulation\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
-    "sim = EarthSystemSimulation('config/model_config.yaml', device)\n",
+    "sim = EarthSystemSimulation(str(config_path), device)\n",
     "print(\"Simulation initialized!\")\n",
     "\n",
+    "# Run simulation with progress tracking\n",
+    "def run_simulation_with_progress(sim, num_steps, save_frequency):\n",
+    "    print(\"Running simulation...\")\n",
+    "    try:\n",
+    "        trajectory = sim.run_simulation(\n",
+    "            num_steps=num_steps,\n",
+    "            save_frequency=save_frequency\n",
+    "        )\n",
+    "        print(\"Simulation complete!\")\n",
+    "        return trajectory\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during simulation: {str(e)}\")\n",
+    "        raise\n",
+    "\n",
     "# Run simulation\n",
-    "print(\"Running simulation...\")\n",
-    "trajectory = sim.run_simulation(\n",
-    "    num_steps=50,\n",
-    "    save_frequency=5\n",
-    ")\n",
-    "print(\"Simulation complete!\")"
+    "trajectory = run_simulation_with_progress(sim, num_steps=50, save_frequency=5)"
    ]
   },
   {
@@ -226,7 +207,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Plot results\n",
     "fig, axes = plt.subplots(3, 1, figsize=(12, 12))\n",
@@ -267,7 +247,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Save results to file\n",
     "output_file = 'simulation_results.npz'\n",
@@ -289,13 +268,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.8"
   }
  },
  "nbformat": 4,
