Refactor Google Colab simulation notebook to improve gradient handling and enhance configuration validation

--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Earth System Simulation - Google Colab Version\n",
     "\n",
-    "This notebook shows how to run the Earth system simulation in Google Colab with proper tensor handling."
+    "This notebook shows how to run the Earth system simulation with proper gradient handling."
    ]
   },
   {
@@ -14,7 +14,7 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Install dependencies\n",
+    "# Install required packages\n",
     "!pip install torch numpy matplotlib pyyaml tqdm plotly\n",
     "\n",
     "# Clone repository\n",
@@ -38,6 +38,7 @@
     "import sys\n",
     "from typing import Dict, List, Tuple, Optional\n",
     "from tqdm.notebook import tqdm\n",
+    "import contextlib\n",
     "\n",
     "# Add project root to Python path\n",
     "project_root = Path.cwd()\n",
@@ -53,52 +54,56 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "def run_simulation_with_progress(sim: EarthSystemSimulation, num_steps: int, save_frequency: int) -> Dict:\n",
-    "    \"\"\"Run simulation with progress tracking and proper tensor handling.\"\"\"\n",
-    "    try:\n",
-    "        print(\"Starting simulation...\")\n",
-    "        \n",
-    "        # Initialize states\n",
-    "        with torch.no_grad():\n",
-    "            physical_state, biosphere_state, geosphere_state = sim._initialize_states()\n",
-    "        \n",
-    "        # Storage for trajectory\n",
-    "        trajectory = {\n",
-    "            'physical': [],\n",
-    "            'biosphere': [],\n",
-    "            'geosphere': [],\n",
-    "            'times': []\n",
-    "        }\n",
-    "        \n",
-    "        # Save initial states\n",
-    "        with torch.no_grad():\n",
-    "            trajectory['physical'].append(physical_state.detach().cpu().numpy())\n",
-    "            trajectory['biosphere'].append(biosphere_state.detach().cpu().numpy())\n",
-    "            trajectory['geosphere'].append(geosphere_state.detach().cpu().numpy())\n",
-    "            trajectory['times'].append(sim.synchronizer.current_times)\n",
-    "        \n",
-    "        # Run simulation steps with progress bar\n",
-    "        for step in tqdm(range(num_steps), desc='Simulation Progress'):\n",
-    "            # Run one timestep with gradient disabled\n",
-    "            with torch.no_grad():\n",
-    "                physical_state, biosphere_state, geosphere_state = sim.run_timestep(\n",
-    "                    physical_state, biosphere_state, geosphere_state\n",
-    "                )\n",
-    "            \n",
-    "            # Save states periodically\n",
-    "            if step % save_frequency == 0:\n",
-    "                with torch.no_grad():\n",
-    "                    trajectory['physical'].append(physical_state.detach().cpu().numpy())\n",
-    "                    trajectory['biosphere'].append(biosphere_state.detach().cpu().numpy())\n",
-    "                    trajectory['geosphere'].append(geosphere_state.detach().cpu().numpy())\n",
-    "                    trajectory['times'].append(sim.synchronizer.current_times)\n",
-    "        \n",
-    "        print(\"Simulation completed successfully!\")\n",
-    "        return trajectory\n",
+    "class NoGradSimulation:\n",
+    "    \"\"\"Wrapper class to ensure simulation runs without gradients.\"\"\"\n",
     "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error during simulation: {str(e)}\")\n",
-    "        raise"
+    "    def __init__(self, sim: EarthSystemSimulation):\n",
+    "        self.sim = sim\n",
+    "        \n",
+    "    def run_with_progress(self, num_steps: int, save_frequency: int) -> Dict:\n",
+    "        \"\"\"Run simulation with progress tracking and guaranteed no gradients.\"\"\"\n",
+    "        try:\n",
+    "            print(\"Starting simulation...\")\n",
+    "            \n",
+    "            # Storage for trajectory\n",
+    "            trajectory = {\n",
+    "                'physical': [],\n",
+    "                'biosphere': [],\n",
+    "                'geosphere': [],\n",
+    "                'times': []\n",
+    "            }\n",
+    "            \n",
+    "            # Ensure no gradients throughout simulation\n",
+    "            with torch.no_grad():\n",
+    "                # Initialize states\n",
+    "                physical_state, biosphere_state, geosphere_state = self.sim._initialize_states()\n",
+    "                \n",
+    "                # Save initial states\n",
+    "                trajectory['physical'].append(physical_state.cpu().numpy())\n",
+    "                trajectory['biosphere'].append(biosphere_state.cpu().numpy())\n",
+    "                trajectory['geosphere'].append(geosphere_state.cpu().numpy())\n",
+    "                trajectory['times'].append(self.sim.synchronizer.current_times)\n",
+    "                \n",
+    "                # Run simulation with progress bar\n",
+    "                for step in tqdm(range(num_steps), desc='Simulation Progress'):\n",
+    "                    # Run timestep\n",
+    "                    physical_state, biosphere_state, geosphere_state = self.sim.run_timestep(\n",
+    "                        physical_state, biosphere_state, geosphere_state\n",
+    "                    )\n",
+    "                    \n",
+    "                    # Save states periodically\n",
+    "                    if step % save_frequency == 0:\n",
+    "                        trajectory['physical'].append(physical_state.cpu().numpy())\n",
+    "                        trajectory['biosphere'].append(biosphere_state.cpu().numpy())\n",
+    "                        trajectory['geosphere'].append(geosphere_state.cpu().numpy())\n",
+    "                        trajectory['times'].append(self.sim.synchronizer.current_times)\n",
+    "            \n",
+    "            print(\"Simulation completed successfully!\")\n",
+    "            return trajectory\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error during simulation: {str(e)}\")\n",
+    "            raise"
    ]
   },
   {
@@ -106,7 +111,7 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Load and modify configuration\n",
+    "# Load and validate configuration\n",
     "with open('config/model_config.yaml', 'r') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -123,9 +128,10 @@
     "print(f\"Using device: {device}\")\n",
     "\n",
     "sim = EarthSystemSimulation('config/colab_config.yaml', device)\n",
+    "wrapped_sim = NoGradSimulation(sim)\n",
     "\n",
-    "# Run simulation\n",
-    "trajectory = run_simulation_with_progress(sim, num_steps=50, save_frequency=5)"
+    "# Run simulation with no gradients\n",
+    "trajectory = wrapped_sim.run_with_progress(num_steps=50, save_frequency=5)"
    ]
   },
   {
@@ -163,6 +169,34 @@
     "\n",
     "# Plot results\n",
     "plot_results(trajectory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "# Save results to file\n",
+    "try:\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    save_dir = '/content/drive/MyDrive/earth_system_results'\n",
+    "except:\n",
+    "    save_dir = 'results'\n",
+    "    \n",
+    "import os\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
+    "save_path = os.path.join(save_dir, 'simulation_results.npz')\n",
+    "\n",
+    "np.savez(\n",
+    "    save_path,\n",
+    "    physical_states=np.array(trajectory['physical']),\n",
+    "    biosphere_states=np.array(trajectory['biosphere']),\n",
+    "    geosphere_states=np.array(trajectory['geosphere']),\n",
+    "    times=trajectory['times']\n",
+    ")\n",
+    "\n",
+    "print(f\"Results saved to: {save_path}\")"
    ]
   }
  ],
