Update model configuration to clarify input dimensions and enhance state definitions; add debug parameters for improved simulation monitoring

--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Earth System Simulation - Google Colab Version\n",
     "\n",
-    "This notebook shows how to run the Earth system simulation with proper gradient handling."
+    "This notebook runs the Earth system simulation with debug output for troubleshooting."
    ]
   },
   {
@@ -14,7 +14,7 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Install required packages\n",
+    "# Install dependencies\n",
     "!pip install torch numpy matplotlib pyyaml tqdm plotly\n",
     "\n",
     "# Clone repository\n",
@@ -38,72 +38,13 @@
     "import sys\n",
     "from typing import Dict, List, Tuple, Optional\n",
     "from tqdm.notebook import tqdm\n",
-    "import contextlib\n",
     "\n",
     "# Add project root to Python path\n",
     "project_root = Path.cwd()\n",
     "if str(project_root) not in sys.path:\n",
     "    sys.path.append(str(project_root))\n",
     "\n",
-    "from scripts.run_simulation import EarthSystemSimulation\n",
-    "from scripts.visualize_results import create_visualizations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "source": [
-    "class NoGradSimulation:\n",
-    "    \"\"\"Wrapper class to ensure simulation runs without gradients.\"\"\"\n",
-    "    \n",
-    "    def __init__(self, sim: EarthSystemSimulation):\n",
-    "        self.sim = sim\n",
-    "        \n",
-    "    def run_with_progress(self, num_steps: int, save_frequency: int) -> Dict:\n",
-    "        \"\"\"Run simulation with progress tracking and guaranteed no gradients.\"\"\"\n",
-    "        try:\n",
-    "            print(\"Starting simulation...\")\n",
-    "            \n",
-    "            # Storage for trajectory\n",
-    "            trajectory = {\n",
-    "                'physical': [],\n",
-    "                'biosphere': [],\n",
-    "                'geosphere': [],\n",
-    "                'times': []\n",
-    "            }\n",
-    "            \n",
-    "            # Ensure no gradients throughout simulation\n",
-    "            with torch.no_grad():\n",
-    "                # Initialize states\n",
-    "                physical_state, biosphere_state, geosphere_state = self.sim._initialize_states()\n",
-    "                \n",
-    "                # Save initial states\n",
-    "                trajectory['physical'].append(physical_state.cpu().numpy())\n",
-    "                trajectory['biosphere'].append(biosphere_state.cpu().numpy())\n",
-    "                trajectory['geosphere'].append(geosphere_state.cpu().numpy())\n",
-    "                trajectory['times'].append(self.sim.synchronizer.current_times)\n",
-    "                \n",
-    "                # Run simulation with progress bar\n",
-    "                for step in tqdm(range(num_steps), desc='Simulation Progress'):\n",
-    "                    # Run timestep\n",
-    "                    physical_state, biosphere_state, geosphere_state = self.sim.run_timestep(\n",
-    "                        physical_state, biosphere_state, geosphere_state\n",
-    "                    )\n",
-    "                    \n",
-    "                    # Save states periodically\n",
-    "                    if step % save_frequency == 0:\n",
-    "                        trajectory['physical'].append(physical_state.cpu().numpy())\n",
-    "                        trajectory['biosphere'].append(biosphere_state.cpu().numpy())\n",
-    "                        trajectory['geosphere'].append(geosphere_state.cpu().numpy())\n",
-    "                        trajectory['times'].append(self.sim.synchronizer.current_times)\n",
-    "            \n",
-    "            print(\"Simulation completed successfully!\")\n",
-    "            return trajectory\n",
-    "        \n",
-    "        except Exception as e:\n",
-    "            print(f\"Error during simulation: {str(e)}\")\n",
-    "            raise"
+    "from scripts.run_simulation import EarthSystemSimulation, print_tensor_info"
    ]
   },
   {
@@ -115,23 +56,119 @@
     "with open('config/model_config.yaml', 'r') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
-    "# Adjust for Colab resources\n",
-    "config['grid_height'] = 16\n",
-    "config['grid_width'] = 16\n",
+    "# Print configuration\n",
+    "print(\"Configuration:\")\n",
+    "print(\"\\nPhysical System:\")\n",
+    "print(f\"  Input dimension: {config['physical_system']['input_dim']}\")\n",
+    "print(f\"  Grid size: {config['grid_height']}x{config['grid_width']}\")\n",
+    "\n",
+    "print(\"\\nBiosphere System:\")\n",
+    "print(f\"  State dimension: {config['biosphere']['state_dim']}\")\n",
+    "print(f\"  Action dimension: {config['biosphere']['action_dim']}\")\n",
+    "\n",
+    "print(\"\\nGeosphere System:\")\n",
+    "print(f\"  State dimension: {config['geosphere']['state_dim']}\")\n",
+    "print(f\"  Action dimension: {config['geosphere']['action_dim']}\")\n",
     "\n",
     "# Save modified config\n",
     "with open('config/colab_config.yaml', 'w') as f:\n",
-    "    yaml.dump(config, f)\n",
-    "\n",
-    "# Initialize simulation\n",
+    "    yaml.dump(config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "def run_simulation_with_debug(\n",
+    "    sim: EarthSystemSimulation,\n",
+    "    num_steps: int,\n",
+    "    save_frequency: int\n",
+    ") -> Dict:\n",
+    "    \"\"\"Run simulation with debug output.\"\"\"\n",
+    "    try:\n",
+    "        print(\"Starting simulation...\")\n",
+    "        \n",
+    "        # Initialize states with debug output\n",
+    "        with torch.no_grad():\n",
+    "            physical_state, biosphere_state, geosphere_state = sim._initialize_states()\n",
+    "            \n",
+    "            print(\"\\nInitial states:\")\n",
+    "            print_tensor_info(\"Physical\", physical_state)\n",
+    "            print_tensor_info(\"Biosphere\", biosphere_state)\n",
+    "            print_tensor_info(\"Geosphere\", geosphere_state)\n",
+    "        \n",
+    "        # Storage for trajectory\n",
+    "        trajectory = {\n",
+    "            'physical': [],\n",
+    "            'biosphere': [],\n",
+    "            'geosphere': [],\n",
+    "            'times': []\n",
+    "        }\n",
+    "        \n",
+    "        # Save initial states\n",
+    "        with torch.no_grad():\n",
+    "            trajectory['physical'].append(physical_state.cpu().numpy())\n",
+    "            trajectory['biosphere'].append(biosphere_state.cpu().numpy())\n",
+    "            trajectory['geosphere'].append(geosphere_state.cpu().numpy())\n",
+    "            trajectory['times'].append(sim.synchronizer.current_times)\n",
+    "        \n",
+    "        # Run simulation steps with progress bar\n",
+    "        for step in tqdm(range(num_steps), desc='Simulation Progress'):\n",
+    "            if step % 10 == 0:\n",
+    "                print(f\"\\nStep {step}/{num_steps}:\")\n",
+    "            \n",
+    "            # Run timestep with gradient disabled\n",
+    "            with torch.no_grad():\n",
+    "                physical_state, biosphere_state, geosphere_state = sim.run_timestep(\n",
+    "                    physical_state, biosphere_state, geosphere_state\n",
+    "                )\n",
+    "            \n",
+    "            # Save states periodically\n",
+    "            if step % save_frequency == 0:\n",
+    "                with torch.no_grad():\n",
+    "                    trajectory['physical'].append(physical_state.cpu().numpy())\n",
+    "                    trajectory['biosphere'].append(biosphere_state.cpu().numpy())\n",
+    "                    trajectory['geosphere'].append(geosphere_state.cpu().numpy())\n",
+    "                    trajectory['times'].append(sim.synchronizer.current_times)\n",
+    "                    \n",
+    "                    if step % 10 == 0:\n",
+    "                        print(\"\\nCurrent states:\")\n",
+    "                        print_tensor_info(\"Physical\", physical_state)\n",
+    "                        print_tensor_info(\"Biosphere\", biosphere_state)\n",
+    "                        print_tensor_info(\"Geosphere\", geosphere_state)\n",
+    "        \n",
+    "        print(\"\\nSimulation completed successfully!\")\n",
+    "        return trajectory\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"\\nError during simulation: {str(e)}\")\n",
+    "        \n",
+    "        # Print current state information\n",
+    "        print(\"\\nState information at error:\")\n",
+    "        try:\n",
+    "            print_tensor_info(\"Physical\", physical_state)\n",
+    "            print_tensor_info(\"Biosphere\", biosphere_state)\n",
+    "            print_tensor_info(\"Geosphere\", geosphere_state)\n",
+    "        except:\n",
+    "            print(\"Could not print state information\")\n",
+    "            \n",
+    "        raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "# Initialize simulation with debug mode\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
-    "sim = EarthSystemSimulation('config/colab_config.yaml', device)\n",
-    "wrapped_sim = NoGradSimulation(sim)\n",
+    "sim = EarthSystemSimulation('config/colab_config.yaml', device=device, debug=True)\n",
     "\n",
-    "# Run simulation with no gradients\n",
-    "trajectory = wrapped_sim.run_with_progress(num_steps=50, save_frequency=5)"
+    "# Run simulation with debug output\n",
+    "trajectory = run_simulation_with_debug(sim, num_steps=50, save_frequency=5)"
    ]
   },
   {
@@ -140,7 +177,7 @@
    "metadata": {},
    "source": [
     "def plot_results(trajectory: Dict):\n",
-    "    \"\"\"Plot simulation results.\"\"\"\n",
+    "    \"\"\"Plot simulation results with debug information.\"\"\"\n",
     "    fig, axes = plt.subplots(3, 1, figsize=(12, 12))\n",
     "    \n",
     "    # Plot physical system results\n",
@@ -166,44 +203,27 @@
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "\n",
-    "# Plot results\n",
-    "plot_results(trajectory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "source": [
-    "# Save results to file\n",
-    "try:\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
-    "    save_dir = '/content/drive/MyDrive/earth_system_results'\n",
-    "except:\n",
-    "    save_dir = 'results'\n",
     "    \n",
-    "import os\n",
-    "os.makedirs(save_dir, exist_ok=True)\n",
-    "save_path = os.path.join(save_dir, 'simulation_results.npz')\n",
+    "    # Print statistical information\n",
+    "    print(\"\\nTrajectory Statistics:\")\n",
+    "    print(\"\\nPhysical System:\")\n",
+    "    print(f\"  Temperature range: [{temp_mean.min():.3f}, {temp_mean.max():.3f}]\")\n",
+    "    \n",
+    "    print(\"\\nBiosphere System:\")\n",
+    "    print(f\"  Vegetation range: [{veg_mean.min():.3f}, {veg_mean.max():.3f}]\")\n",
+    "    \n",
+    "    print(\"\\nGeosphere System:\")\n",
+    "    print(f\"  Elevation range: [{elev_mean.min():.3f}, {elev_mean.max():.3f}]\")\n",
     "\n",
-    "np.savez(\n",
-    "    save_path,\n",
-    "    physical_states=np.array(trajectory['physical']),\n",
-    "    biosphere_states=np.array(trajectory['biosphere']),\n",
-    "    geosphere_states=np.array(trajectory['geosphere']),\n",
-    "    times=trajectory['times']\n",
-    ")\n",
-    "\n",
-    "print(f\"Results saved to: {save_path}\")"
+    "# Plot results with debug information\n",
+    "plot_results(trajectory)"
    ]
   }
  ],
  "metadata": {
   "accelerator": "GPU",
   "colab": {
-   "name": "Earth System Simulation",
+   "name": "Earth System Simulation (Debug)",
    "provenance": []
   },
   "kernelspec": {
