--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -44,7 +44,17 @@
     "if str(project_root) not in sys.path:\n",
     "    sys.path.append(str(project_root))\n",
     "\n",
-    "from scripts.run_simulation import EarthSystemSimulation, print_tensor_info"
+    "from scripts.run_simulation import EarthSystemSimulation\n",
+    "\n",
+    "def print_tensor_info(name: str, tensor: torch.Tensor):\n",
+    "    \"\"\"Debug helper to print tensor information.\"\"\"\n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Shape: {tensor.shape}\")\n",
+    "    print(f\"  Device: {tensor.device}\")\n",
+    "    print(f\"  Requires grad: {tensor.requires_grad}\")\n",
+    "    if tensor.numel() > 0:\n",
+    "        print(f\"  Range: [{tensor.min().item():.3f}, {tensor.max().item():.3f}]\")\n",
+    "    print()"
    ]
   },
   {
