Refactor EarthSystemSimulation class to enhance debug logging and input validation; update Colab notebook for improved simulation configuration and clarity

--- a/examples/colab_simulation.ipynb
+++ b/examples/colab_simulation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Earth System Simulation - Google Colab Version\n",
     "\n",
-    "This notebook runs the Earth system simulation with debug output for troubleshooting."
+    "This notebook runs the Earth system simulation with debug output."
    ]
   },
   {
@@ -44,17 +44,7 @@
     "if str(project_root) not in sys.path:\n",
     "    sys.path.append(str(project_root))\n",
     "\n",
-    "from scripts.run_simulation import EarthSystemSimulation\n",
-    "\n",
-    "def print_tensor_info(name: str, tensor: torch.Tensor):\n",
-    "    \"\"\"Debug helper to print tensor information.\"\"\"\n",
-    "    print(f\"{name}:\")\n",
-    "    print(f\"  Shape: {tensor.shape}\")\n",
-    "    print(f\"  Device: {tensor.device}\")\n",
-    "    print(f\"  Requires grad: {tensor.requires_grad}\")\n",
-    "    if tensor.numel() > 0:\n",
-    "        print(f\"  Range: [{tensor.min().item():.3f}, {tensor.max().item():.3f}]\")\n",
-    "    print()"
+    "from scripts.run_simulation import EarthSystemSimulation"
    ]
   },
   {
@@ -83,6 +73,22 @@
     "# Save modified config\n",
     "with open('config/colab_config.yaml', 'w') as f:\n",
     "    yaml.dump(config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "def print_tensor_info(name: str, tensor: torch.Tensor):\n",
+    "    \"\"\"Debug helper to print tensor information.\"\"\"\n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Shape: {tensor.shape}\")\n",
+    "    print(f\"  Device: {tensor.device}\")\n",
+    "    print(f\"  Requires grad: {tensor.requires_grad}\")\n",
+    "    if tensor.numel() > 0:\n",
+    "        print(f\"  Range: [{tensor.min().item():.3f}, {tensor.max().item():.3f}]\")\n",
+    "    print()"
    ]
   },
   {
@@ -171,11 +177,15 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Initialize simulation with debug mode\n",
+    "# Initialize simulation\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
-    "sim = EarthSystemSimulation('config/colab_config.yaml', device=device, debug=True)\n",
+    "sim = EarthSystemSimulation(\n",
+    "    config_path='config/colab_config.yaml',\n",
+    "    device=device\n",
+    ")\n",
+    "sim.debug = True  # Enable debug mode after initialization\n",
     "\n",
     "# Run simulation with debug output\n",
     "trajectory = run_simulation_with_debug(sim, num_steps=50, save_frequency=5)"
